[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ghostvault-intelligence"
version = "1.0.0"
description = "GhostVault Intelligence System - Wallet Intelligence Engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "httpx==0.27.0",
    "sqlalchemy[asyncio]==2.0.30",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "redis[hiredis]==5.0.4",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "structlog==24.1.0",
    "tenacity==8.3.0",
    "python-dotenv==1.0.1",
    "aiohttp==3.9.5",
    "base58==2.1.1",
    "eth-utils==4.1.1",
    "websockets==12.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pytest-httpx==0.30.0",
    "coverage==7.5.1",
    "ruff==0.4.4",
    "mypy==1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
